# Robomaster-ArmorNumberRecognition

./: .gitignore  CMakeLists.txt  README.md  bpTrain.cpp  extractNumber.cpp  imageBalance.cpp  moveFiles.cpp  predict.cpp  train.cpp
SVMTrain/include/: FileProcess.h
SVMTrain/models/: ann.xml
